--- a/WebUI/web/index.html
+++ b/WebUI/web/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="login">
-        <img src="images/login.png">
+        <img src="images/logo.png">
     </div>
 </div>
 
