2 more cols added

--- a/WebUI/web/lobby.html
+++ b/WebUI/web/lobby.html
@@ -64,6 +64,8 @@
                 <th>Signed Up Players</th>
                 <th>Board Size</th>
                 <th>Game Status</th>
+                <th>Dictionary name</th>
+                <th>Letters amount</th>
             </tr>
             </thead>
             <tbody id="gameTable">
