activate dice button

--- a/WebUI/web/GameRoom.html
+++ b/WebUI/web/GameRoom.html
@@ -52,6 +52,8 @@
         </div>
 
         <input type="button" value="Quit" id="buttonQuit" class="btn btn-danger"/>
+        <input type="button" value="Throw dice" id="buttonDice" class="btn btn-danger"/>
+
 
         <div id="playersTable" class="section">
             <div class="sectionTitle"> Online Players</div>
