Add show tiles button

--- a/WebUI/web/GameRoom.html
+++ b/WebUI/web/GameRoom.html
@@ -53,7 +53,7 @@
 
         <input type="button" value="Quit" id="buttonQuit" class="btn btn-danger"/>
         <input type="button" value="Throw dice" id="buttonDice" class="btn btn-danger"/>
-
+        <input type="button" value="Reveal Tiles" id="buttonShowTiles" class="btn btn-danger"/>
 
         <div id="playersTable" class="section">
             <div class="sectionTitle"> Online Players</div>
