--- a/WebUI/web/GameRoom.html
+++ b/WebUI/web/GameRoom.html
@@ -59,8 +59,8 @@
                 <tr>
                     <th>Name</th>
                     <th style="width: 30%">Type</th>
-                    <th style="width: 20%">Color</th>
                     <th style="width: 20%">Score</th>
+                    <th style="width: 20%">Words</th>
                 </tr>
                 </thead>
                 <tbody id="playingUsersTable">
